[package]
edition = "2018"
name = "caching_proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
brotli-decompressor = "2.3.2"
directories-next = "2.0.0"
flate2 = "1.0"
http = "0.2"
hyper = {version = "0.14", features = ["full"]}
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"
tokio = {version = "1", features = ["full"]}
lazy_static = "1.4.0"

[[bin]]
name = "intercept_proxy"
path = "src/intercept_proxy.rs"
